--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,8 +11,19 @@
 
 <body>
   <header class="display-flex justify-space-between align-center p-2">
-    <h1>Tech Blog</h1>
-    <a href="/">Home</a>
+    <div>
+      <a href="/">Home</a>
+      {{#if logged_in}}
+      <a href="/dashboard">Dashboard</a>
+      <button class="no-button" id="logout">logout</button>
+      {{else}}
+      <a href="/login">Login</a>
+      {{/if}}
+
+    </div>
+    <div>
+      <h1>Tech Blog</h1>
+    </div>
   </header>
   <main class="container container-fluid mt-5">
     {{{ body }}}
