Added user login/logout/create

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,7 +2,7 @@
 <div>
     <div>
         <h1>{{title}}</h1>
-        <p>{{user.name}}</p>
+        <p>By: {{user.name}}</p>
     </div>
     <div>
         <p>{{description}}</p>
