Added dates to homepage posts

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,6 +3,7 @@
     <div>
         <h1>{{title}}</h1>
         <p>By: {{user.name}}</p>
+        <p>On: {{format_date createdAt}}</p>
     </div>
     <div>
         <p>{{description}}</p>
