--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,13 @@
+<div>
+    <button>Add</button>
+</div>
+
 {{#each posts as |post|}}
 <div>
     <div>
         <h1>{{title}}</h1>
+        <p>By: {{user.name}}</p>
+        <p>On: {{format_date createdAt}}</p>
     </div>
     <div>
         <p>{{description}}</p>
