Added a post page to see individual posts;

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 {{#each posts as |post|}}
 <div>
     <div>
-        <h1>{{title}}</h1>
+        <a href='/post/{{id}}'>{{title}}</a>
         <p>By: {{user.name}}</p>
         <p>On: {{format_date createdAt}}</p>
     </div>
