--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -5,7 +5,7 @@
 {{#each posts as |post|}}
 <div>
     <div>
-        <h1>{{title}}</h1>
+        <a href='/post/{{id}}'>{{title}}</a>
         <p>By: {{user.name}}</p>
         <p>On: {{format_date createdAt}}</p>
     </div>
