fixed seeds to hash passwords, create a post page is now seperate from dahboard

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,6 +15,7 @@
       <a href="/">Home</a>
       {{#if logged_in}}
       <a href="/dashboard">Dashboard</a>
+      <a href="/create">Create Post</a>
       <button class="no-button" id="logout">Logout</button>
       {{else}}
       <a href="/login">Login</a>
