--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,6 +1,6 @@
 <div>
     <div>
-        <a href='/post/{{id}}'>{{post.title}}</a>
+        <h2>{{post.title}}</h2>
         <p>By: {{post.user.name}}</p>
         <p>On: {{format_date post.createdAt}}</p>
     </div>
@@ -10,10 +10,12 @@
 </div>
 
 {{#if logged_in}}
-{{!-- Comment Button --}}
+<button class="btn btn-primary" id="comment-button">Add Comment</button>
 {{/if}}
 
-{{#if post.user_id === user_id}}
+{{#if (if_equals post.user_id user_id)}}
 <button class="btn btn-primary" id="update-button">Update</button>
 <button class="btn btn-primary" id="delete-button">Delete</button>
 {{/if}}
+
+<script src="/js/postPage.js"></script>
