Added functionality to create a comment when on a posts page

--- a/views/createPost.handlebars
+++ b/views/createPost.handlebars
@@ -6,7 +6,7 @@
             <input class="form-input" type="textr=" id="post-title" />
         </div>
         <div class="form-group">
-            <label for="post-description">Content:</label>
+            <label for="post-description">Description:</label>
             <input class="form-input" type="text" id="post-description" />
         </div>
         <div class="form-group">
