--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -18,4 +18,21 @@
 <button class="btn btn-primary" id="delete-button">Delete</button>
 {{/if}}
 
+<div class='hide comment'>
+    <h2>Add your comment</h2>
+    <form class="form comment-form">
+        <div class="form-group">
+            <label for="comment-title">Title:</label>
+            <input class="form-input" type="textr=" id="comment-title" />
+        </div>
+        <div class="form-group">
+            <label for="comment-description">Description:</label>
+            <input class="form-input" type="text" id="comment-description" />
+        </div>
+        <div class="form-group">
+            <button class="btn btn-primary" type="submit">Add</button>
+        </div>
+    </form>
+</div>
+
 <script src="/js/postPage.js"></script>
