--- a/views/editPost.handlebars
+++ b/views/editPost.handlebars
@@ -5,11 +5,11 @@
     <form class="form edit-form">
         <div class="form-group">
             <label for="post-title">Title:</label>
-            <input class="form-input" type="textr=" id="post-title" placeholder="{{post.title}}"/>
+            <input class="form-input" type="textr=" id="post-title" value="{{post.title}}"/>
         </div>
         <div class="form-group">
             <label for="post-description">Description:</label>
-            <input class="form-input" type="text" id="post-description" placeholder="{{post.description}}"/>
+            <input class="form-input" type="text" id="post-description" value="{{post.description}}"/>
         </div>
         <div class="form-group">
             <button class="btn btn-primary" type="submit">Submit</button>
