--- a/views/createPost.handlebars
+++ b/views/createPost.handlebars
@@ -1,11 +1,11 @@
-<div>
+<div id='form-page'>
     <h2>Create a Post</h2>
     <form class="form create-form">
         <div class="form-group">
             <label for="post-title">Title:</label>
             <input class="form-input" type="textr=" id="post-title" />
         </div>
-        <div class="form-group">
+        <div class="form-group" id="form-description">
             <label for="post-description">Description:</label>
             <input class="form-input" type="text" id="post-description" />
         </div>
