--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,12 +1,12 @@
 <h2>Your Previous Posts</h2>
 {{#each posts as |post|}}
-<div>
-    <div>
+<div class="blog-post col-5">
+    <div class="display-flex" id="blog-title">
         <a href='/post/{{id}}'>{{title}}</a>
         <p>By: {{user.name}}</p>
         <p>On: {{format_date createdAt}}</p>
     </div>
-    <div>
+    <div id='blog-description'>
         <p>{{description}}</p>
     </div>
 </div>
