--- a/views/editPost.handlebars
+++ b/views/editPost.handlebars
@@ -1,5 +1,5 @@
 {{#if (if_equals post.user_id user_id)}}
-<div>
+<div id='form-page'>
     <h2>Edit your Post</h2>
     <p>Created on: {{format_date post.createdAt}}</p>
     <form class="form edit-form">
@@ -7,7 +7,7 @@
             <label for="post-title">Title:</label>
             <input class="form-input" type="textr=" id="post-title" value="{{post.title}}"/>
         </div>
-        <div class="form-group">
+        <div class="form-group" id='form-description'>
             <label for="post-description">Description:</label>
             <input class="form-input" type="text" id="post-description" value="{{post.description}}"/>
         </div>
