--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,12 +1,12 @@
 {{#each posts as |post|}}
-<div>
-    <div>
-        <a href='/post/{{id}}'>{{title}}</a>
-        <p>By: {{user.name}}</p>
-        <p>On: {{format_date createdAt}}</p>
+  <div class="blog-post col-5">
+    <div class="display-flex" id="blog-title">
+      <a href="/post/{{id}}">{{title}}</a>
+      <p>By: {{user.name}}</p>
+      <p>On: {{format_date createdAt}}</p>
     </div>
-    <div>
-        <p>{{description}}</p>
+    <div id='blog-description'>
+      <p>{{description}}</p>
     </div>
-</div>
+  </div>
 {{/each}}
