--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tech Blog</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Stick+No+Bills&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="/css/style.css" rel="stylesheet"
   <link rel="stylesheet" href="/css/jass.css">
@@ -13,13 +18,13 @@
 <body>
   <header class="display-flex justify-space-between align-center p-2">
     <div>
-      <a href="/">Home</a>
+      <a href="/" id='nav-link'>Home</a>
       {{#if logged_in}}
-      <a href="/dashboard">Dashboard</a>
-      <a href="/create">Create Post</a>
+      <a href="/dashboard" id='nav-link'>Dashboard</a>
+      <a href="/create" id='nav-link'>Create Post</a>
       <button class="no-button" id="logout">Logout</button>
       {{else}}
-      <a href="/login">Login</a>
+      <a href="/login" id='nav-link'>Login</a>
       {{/if}}
 
     </div>
