--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-6" id='form-page'>
     <h2>Login</h2>
 
     <form class="form login-form">
@@ -16,7 +16,8 @@
       </div>
     </form>
   </div>
-  <div class="col-md-6">
+
+  <div class="col-md-6" id='form-page'>
     <h2>Signup</h2>
 
     <form class="form signup-form">
