--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,31 +1,33 @@
-<div>
-    <div>
-        <h2>{{post.title}}</h2>
+<div class="blog-post col-5">
+    <div class="display-flex" id="blog-title">
+        <h3>{{post.title}}</h2>
         <p>By: {{post.user.name}}</p>
         <p>On: {{format_date post.createdAt}}</p>
     </div>
-    <div>
+    <div id='blog-description'>
         <p>{{post.description}}</p>
     </div>
 </div>
+<div id='buttons'>
+    {{#if logged_in}}
+    <button class="btn btn-primary" id="comment-button">Add Comment</button>
+    {{/if}}
 
-{{#if logged_in}}
-<button class="btn btn-primary" id="comment-button">Add Comment</button>
-{{/if}}
+    {{#if (if_equals post.user_id user_id)}}
+    <button class="btn btn-primary" id="update-button">Update</button>
+    <button class="btn btn-primary" id="delete-button">Delete</button>
+    {{/if}}
+</div>
 
-{{#if (if_equals post.user_id user_id)}}
-<button class="btn btn-primary" id="update-button">Update</button>
-<button class="btn btn-primary" id="delete-button">Delete</button>
-{{/if}}
-
+<h2>Comments</h2>
 {{#each comments as |comment|}}
-<div>
-    <div>
-        <h2>{{title}}</h2>
+<div class="blog-post col-5">
+    <div class="display-flex" id="blog-title">
+        <h3>{{title}}</h2>
         <p>By: {{user.name}}</p>
         <p>On: {{format_date createdAt}}</p>
     </div>
-    <div>
+    <div id='blog-description'>
         <p>{{description}}</p>
     </div>
 </div>
