--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -33,7 +33,7 @@
 </div>
 {{/each}}
 
-<div class='hide comment'>
+<div class='hide comment' id="form-page">
     <h2>Add your comment</h2>
     <form class="form comment-form">
         <div class="form-group">
